# lib-cxx-app-utils

./: .gitignore  .travis.yml  Makefile  Makefile.am  README.md  Setup.Makefile  configure.ac  libtool
StlUtils.xcodeproj/: project.pbxproj
StlUtils.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
docs/: 00-Index.html  00-Todo.txt  Features.txt  Makefile  OldIndex.html  Tested.txt
docs/devel/: .cvsignore  00-Index.pod  Install.pod  Makefile  Prerequisites.pod  PrjInstall.pod  Version.pod
docs/man3/: .cvsignore  Makefile  StlUtils.3
docs/old/: 00-Index.html  00-Todo.txt  Features.txt  RegexSpecialChars.txt  Tested.txt  class.checklist.txt
docs/old/devel/: 00-Index.pod  Install.pod  Prerequisites.pod  PrjInstall.pod  Version.pod
docs/old/user/: 00-Index.html  Log.html  Param.html
docs/src/: 00-Readme.xml  Contacts.xml  Makefile  ReleaseNotes.xml
docs/src/Devel/: 00-Readme.xml  Makefile  VersionControl.xml
docs/src/User/: 00-Readme.xml  Makefile  Prerequisites.xml
docs/user/: 00-Index.html  Log.html  Makefile  Param.html
src/: Makefile
src/StlUtils/: .cvsignore  ArchiveFile.C  Bit.hh  Bit.ii  Bitmask.C  Bitmask.cpp  Bitmask.hh  Bitmask.ii  ChangeLog  ClassVersion.C  ClassVersion.hh  ClassVersion.ii  CommaNum.C  CommaNum.hh  Compare.hh  Compress.C  Compress.hh  Compress.ii  DateRange.hh  DateRangeDaily.C  DateRangeDaily.hh  DateRangeWeekly.C  DateRangeWeekly.hh  DateTime.C  DateTime.hh  Directory.C  Directory.hh  Directory.ii  DumpInfo.hh  FileBatch.C  FileBatch.hh  FileBatch.ii  FilePath.C  FilePath.hh  FilePath.ii  FileStat.C  FileStat.hh  FileStat.ii  IosOpenModeFromString.C  IosOpenModeToString.C  (+74 more)
src/arch/AIX41/: Makefile.StlUtils  Makefile.Test
src/arch/Darwin/: Makefile.StlUtils  Makefile.Test
src/arch/Hpux10/: Makefile.StlUtils  Makefile.Test
src/arch/Linux/: Makefile.StlUtils  Makefile.Test
src/arch/Other/: BinFile.C  BinFile.hh  BinFile.ii  BinaryFile.C  BinaryFile.hh  BinaryFile.ii  File.C  File.hh  File.ii  LockFile.C  LockFile.hh  NewMapFile.C  NewMapFile.hh  NewMapFile.ii  StlUtilsExceptions.hh  basename.C  bool.C
src/arch/Sun5/: Makefile.StlUtils  Makefile.Test
src/arch/solaris_5_9/: Makefile.StlUtils  Makefile.Test
src/clue/: ArchiveFile.C  Bitmask.cpp  Bitmask.hpp  ClassVersion.C  ClassVersion.hh  Clue.hpp  CommaNum.hpp  CommaNumber.cpp  Compress.C  DateRange.C  DateRange.cpp  DateRange.hpp  DateRange.ii  DateRangeDaily.cpp  DateRangeDaily.hpp  DateRangeDaily.ii  DateRangeWeekly.cpp  DateRangeWeekly.hpp  DateRangeWeekly.ii  DateTime.C  DateTime.cpp  DateTime.hpp  DateTime.ii  DateTimeUtils.cpp  DateTimeUtils.hpp  Directory.cpp  Directory.hh  Directory.hpp  DumpInfo.hpp  FileBatch.C  FileBatch.cpp  FileBatch.hh  FileBatch.hpp  FileBatch.ii  FileLock.cpp  FileLock.hpp  FileLock.ii  FileModeString.cpp  FileOp.cpp  FileOp.hpp  (+111 more)
src/config/: 00-Makefile.cfg  Setup.cfg.src
src/scripts/: UnArchive.ksh
support/: AnonFtp.ksh  Dir-6.01.Makefile  Dir-6.03.Makefile  Dist-6.01.Makefile  Install.Makefile  MakeConfigs.Makefile  Setup.Makefile  Support.COMMON  Support.DOCTOOLS  Support.GNUREGEX  Support.Items.Header  Support.Makefile  mkdirhier.sh
test/: .cvsignore  .dbxinit  Makefile
test/AppParam/: AppParam.C  AppParam.hh  Makefile  Test.args  main.C
test/Base/: .cvsignore
test/Base/data/: .cvsignore  FileStat.01  Str.getDelim.input  getline.Str.input  log.11.exp  log.18.exp  log.21.exp  log.25.exp  log.30.exp  log.32.exp  log.33.exp  log.35.exp  logfile.02.exp  logfile.03.exp  logfile.07.exp  logfile.08.exp  logfile.09.exp  logfile.10.exp  param-03.args.exp  param-03.log.exp
test/Base/src/: .cvsignore  .dbxinit  .gdbinit  AIX.probs  Makefile  StlUtilsTest.hh  TestFunctProto.hh  main.C  t.out  tAbsLong.C  tAlign.C  tArraySize.C  tBetween.C  tBit.C  tBitmask.C  tBitmask01.C  tBitmask02.C  tBitmask03.C  tCharIsBaseDigit.C  tCharToInt.C  tClassVersion.C  tCommaNum.C  tCompare.C  tCompare01.C  tCompare02.C  tDateRange.C  tDateRangeDaily.C  tDateRangeWeekly.C  tDateTime.C  tDateTime01.C  tDateTime02.C  tDateTime03.C  tDateTime04.C  tDateTime05.C  tDateTime06.C  tDateTime07.C  tDateTime08.C  tDateTime1.C  tDateTime2.C  tDateTime3.C  (+118 more)
test/Compress/src/: AppParam.C  AppParam.hh  Makefile  main.C
test/HotSwap/Swapper/: AppParam.C  AppParam.hh  Makefile  main.C
test/HotSwap/User/: .cvsignore  AppParam.C  AppParam.hh  Makefile  main.C
test/InboundProcessor/src/: AppParam.C  AppParam.hh  Makefile  main.C
test/Misc/src/: Makefile  main.C
test/Semaphore/: Makefile  main.C
test/Test02/Client/: AppParam.hh  HandlerConnect.C  HandlerDisc.C  HandlerMesg.C  Makefile  main.C
test/Test02/Server/: .cvsignore  AppParam.hh  HandlerConnect.C  HandlerDisc.C  HandlerMesg.C  Makefile  main.C
test/Thread/src/: .cvsignore  AppParam.hh  Makefile  SubThread.hh  ThreadTest.C  (+4 more)
tests/: .gdbinit  validator.bash
tests/AppParam/: main.C
tests/unit/: .gitignore  Makefile.am  main.cpp  v_AbsLong.cpp  v_Align.cpp  v_Between.cpp  v_CharIsBaseDigit.cpp  v_CharToInt.cpp  v_CommaNum.cpp  v_DateRange.cpp  v_DateRangeDaily.cpp  v_DateRangeWeekly.cpp  v_DateTime01.cpp  v_DateTime02.cpp  v_DateTime03.cpp  v_DateTime04.cpp  v_DateTime05.cpp  v_DateTime06.cpp  v_DateTime07.cpp  v_DateTimeUtils.cpp  v_DwordAlign.cpp  v_FileBatch.cpp  v_FileLock.cpp  v_FileOp01.cpp  v_FileOp02.cpp  v_FilePath01.cpp  v_FilePath02.cpp  v_FilePath03.cpp  v_FilePath04.cpp  v_FileStat01.cpp  v_FileStat02.cpp  v_FileStat03.cpp  v_FileStat04.cpp  v_FileStat05.cpp  v_FileStat06.cpp  v_HotSwap.cpp  v_InboundProcessor.cpp  v_IsBaseDigit.cpp  v_IsTimetDst.cpp  v_Log01.cpp  (+78 more)
tests/unit/data/FileBatch/: tdata.01
tests/unit/data/FileOp/: .gitignore
tests/unit/data/FileStat/: .gitignore  FileStat.l1
tests/unit/data/Log/: .gitignore  log.10.exp  log.16.exp  log.17.exp  log.24.exp  log.27.exp  log.28.exp  log.39.exp  logfile.05.exp  logfile.12.exp
tests/unit/data/Param/: .gitignore
tests/unit/data/Str/: .gitignore  Str.getDelim.char.input  Str.getline.input  Str.operator.input
tests/unit/data/SubStr/: .gitignore  SubStr.operator.output.01.exp  SubStr.operator.output.02.exp
(+211 files in other folders)
