# 2001-06-04 (cc) <paul4hough@gmail.com>
#

lib_LTLIBRARIES = libclue.la

libclue_la_SOURCES =				\
Bitmask.cpp					\
StringCapitalize.cpp				\
StringCaseCompare.cpp				\
StringCaseReverseSearch.cpp			\
StringCaseSearch.cpp				\
StringFirstNotOf.cpp				\
StringFrom.cpp					\
StringLower.cpp					\
StringReverseSearch.cpp				\
StringSearch.cpp				\
StringTo.cpp					\
StringUpper.cpp					\
StripTrailing.cpp				\
StripWhite.cpp

include_HEADERS =				\
	bit					\
	Bitmask.hpp				\
	compare					\
	StringUtils.hpp

libclue_la_CPPFLAGS = -I..
libclue_la_CXXFLAGS = -ggdb
